fix icon alignment

--- a/src/app-pages/map/components/map-details/mapDetails.scss
+++ b/src/app-pages/map/components/map-details/mapDetails.scss
@@ -56,7 +56,8 @@
         .icons {
           margin: 5px 10px;
           padding: 10px;
-          padding-right: 15px;
+          display: flex;
+          justify-content: center;
           background-color: $base-lighter-gray;
           width: 50px;
         }
